Your commit message

--- a/tests/qaandres/test_cases.yml
+++ b/tests/qaandres/test_cases.yml
@@ -982,3 +982,321 @@
   - utterance: '[NO INPUT]'
   - utterance: banana [NO MATCH]
   - utterance: ''
+- description: Test case for asdasdasd.json
+  golden_dialog: asdasdasd.json
+  id: 00b0d352-d9a6-4f06-a37e-abd4bbb0321a
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: '[HANG UP]'
+- description: Test case for asdasqwe.json
+  golden_dialog: asdasqwe.json
+  id: 699653b0-c3b0-4ab6-8beb-ca7ae1d97a2b
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: member
+  - utterance: july 1 1975
+  - utterance: damon alonso
+  - utterance: 'yes'
+  - utterance: '11292538200'
+  - utterance: hours
+- description: Test case for asdawdeqe.json
+  golden_dialog: asdawdeqe.json
+  id: 492ad011-af08-4fe6-afdb-278213b50765
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: provider
+  - utterance: 7/21/1994
+  - utterance: shane abbott
+  - utterance: 'yes'
+  - utterance: '262998718'
+  - utterance: '9718'
+  - utterance: asxakmlsxa [NO MATCH]
+  - utterance: check my claim
+- description: Test case for dqwdeas.json
+  golden_dialog: dqwdeas.json
+  id: 0d1c7f13-ec90-4690-917f-bce323c06f8e
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: '[nomatch] [NO MATCH]'
+  - utterance: '[NO INPUT]'
+  - utterance: '[NO INPUT]'
+  - utterance: ''
+- description: Test case for dsadasd.json
+  golden_dialog: dsadasd.json
+  id: 1f3d362d-65ef-4f3d-ac86-a643820d88cc
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: '[NO INPUT]'
+  - utterance: '[NO INPUT]'
+  - utterance: agent
+  - utterance: '[NO INPUT]'
+  - utterance: ''
+- description: Test case for dsasdas.json
+  golden_dialog: dsasdas.json
+  id: dbe54043-f924-4051-b923-c74b6e46b587
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: '[NO INPUT]'
+  - utterance: '[NO INPUT]'
+  - utterance: '[NO INPUT]'
+  - utterance: ''
+- description: Test case for erasdad.json
+  golden_dialog: erasdad.json
+  id: f8797af6-a983-4671-a8b3-cc0240ab0923
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: provider
+  - utterance: 9/20/1938
+  - utterance: banana
+  - utterance: 'yes'
+  - utterance: banana
+  - utterance: '[HANG UP]'
+- description: Test case for eredas.json
+  golden_dialog: eredas.json
+  id: ce4a2719-ff60-44d0-88d1-1ef3fa3ee3f1
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: provider
+  - utterance: 9/20/1938
+  - utterance: carl gandy
+  - utterance: 'yes'
+  - utterance: '[HANG UP]'
+- description: Test case for gtrdas.json
+  golden_dialog: gtrdas.json
+  id: 5140b8b8-e4e1-48e6-a57f-9b413830ee50
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: memeber [NO MATCH]
+  - utterance: member
+  - utterance: july 1 1975
+  - utterance: damon alonso
+  - utterance: 'yes'
+  - utterance: '11292538200'
+  - utterance: i need to update my address
+- description: Test case for qwdas.json
+  golden_dialog: qwdas.json
+  id: da949363-2bdd-4b50-b7f9-a0eb2b8cca9f
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: provider
+  - utterance: 9/20/1938
+  - utterance: carl gandy
+  - utterance: agent
+  - utterance: agent
+  - utterance: ''
+- description: Test case for qweqweas.json
+  golden_dialog: qweqweas.json
+  id: a9b84eef-1a4a-4fab-92fe-b56f17fba1bc
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: '[nomatch] [NO MATCH]'
+  - utterance: '[nomatch] [NO MATCH]'
+  - utterance: '[NO INPUT]'
+  - utterance: ''
+- description: Test case for qwewsdaes.json
+  golden_dialog: qwewsdaes.json
+  id: 6ec1686d-4b62-49c1-859f-22ee42ed28d2
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: member
+  - utterance: jul 1 1975
+  - utterance: damon alonso
+  - utterance: 'yes'
+  - utterance: '1272'
+  - utterance: crisis
+- description: Test case for qwewsraas.json
+  golden_dialog: qwewsraas.json
+  id: e2e3dccb-c900-41e7-a043-3bffefc25f13
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: memeber [NO MATCH]
+  - utterance: member
+  - utterance: jul 1 1975
+  - utterance: damon alonso
+  - utterance: 'yes'
+  - utterance: '1272'
+  - utterance: '[NO INPUT]'
+  - utterance: '[NO INPUT]'
+  - utterance: ''
+- description: Test case for reaad.json
+  golden_dialog: reaad.json
+  id: b37206c1-be24-43e9-9ca5-f41e30c83d17
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: agent
+  - utterance: agent
+  - utterance: ''
+- description: Test case for reasad.json
+  golden_dialog: reasad.json
+  id: bb43ebd4-5b6b-4145-904d-3f3abc09e304
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: provider
+  - utterance: 9/20/1938
+  - utterance: '[NO INPUT]'
+  - utterance: '[NO INPUT]'
+  - utterance: '[NO INPUT]'
+  - utterance: ''
+- description: Test case for reasdazdsa.json
+  golden_dialog: reasdazdsa.json
+  id: cdf342b5-f8f0-4242-8635-a6e7de2c9614
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: provider
+  - utterance: 9/20/1938
+  - utterance: carl gandy
+  - utterance: 'no'
+  - utterance: '[HANG UP]'
+- description: Test case for rtrsdfsas.json
+  golden_dialog: rtrsdfsas.json
+  id: 030f3cb9-cacc-4378-8671-e614da917d29
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: '[NO INPUT]'
+  - utterance: agent
+  - utterance: '[nomatch] [NO MATCH]'
+  - utterance: '[nomatch] [NO MATCH]'
+  - utterance: '[NO INPUT]'
+  - utterance: ''
+- description: Test case for trdsfas.json
+  golden_dialog: trdsfas.json
+  id: 791912f3-c001-479b-9e29-0d278806868d
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: member
+  - utterance: 09/08/1936
+  - utterance: charles t brown
+  - utterance: 'yes'
+  - utterance: charles brown
+  - utterance: '10018390800'
+- description: Test case for trsdfasdsa.json
+  golden_dialog: trsdfasdsa.json
+  id: 30f6d35a-61a3-4674-94dc-0b94951eaad2
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: neither
+  - utterance: 7/21/1994
+  - utterance: shane abbott
+  - utterance: 'yes'
+  - utterance: '9718'
+  - utterance: '[NO INPUT]'
+  - utterance: benefits
+- description: Test case for trsdfd.json
+  golden_dialog: trsdfd.json
+  id: 7a1bfbb8-b30f-4f4e-97b8-0fdda00fcbb5
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: memeber [NO MATCH]
+  - utterance: member
+  - utterance: july 1 1975
+  - utterance: damon alonso
+  - utterance: 'yes'
+  - utterance: '11292538200'
+  - utterance: agent
+- description: Test case for trwersad.json
+  golden_dialog: trwersad.json
+  id: 1cf6eb59-e046-4aee-bbbf-c032432cfed3
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: member
+  - utterance: ju 1 1975
+  - utterance: july 1 1975
+  - utterance: damon alonso
+  - utterance: 'yes'
+  - utterance: '11292538200'
+  - utterance: i want to order a card
+  - utterance: ''
+  - utterance: '[HANG UP]'
+- description: Test case for tsdfdf.json
+  golden_dialog: tsdfdf.json
+  id: 4c98bb02-25d7-4205-b36a-d4033765ef38
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: member
+  - utterance: july 1 1975
+  - utterance: damon alonso
+  - utterance: 'yes'
+  - utterance: '1272'
+  - utterance: eligibility
+  - utterance: ''
+  - utterance: ''
+  - utterance: '[HANG UP]'
+- description: Test case for wedasdas.json
+  golden_dialog: wedasdas.json
+  id: 28a6dd8a-4de1-49e3-8a7f-18e5082a674b
+  session_channel: web-chat
+  utterances:
+  - utterance: ''
+  - utterance: ''
+  - utterance: ''
+  - utterance: '[nomatch] [NO MATCH]'
+  - utterance: '[nomatch] [NO MATCH]'
+  - utterance: agent
+  - utterance: agent
+  - utterance: ''
